--- a/css/sections/collection.css
+++ b/css/sections/collection.css
@@ -26,11 +26,13 @@
     list-style: none;
     margin: 0;
     padding: 0;
+    gap: .75rem;
 }
 
 .collections__list-item {
     aspect-ratio: 1;
     padding: 20px;
+    /* margin: 5px; */
     border-radius: 6px;
 
     position: relative;
