--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,12 @@
     align-items: center;
     justify-content: center;
     padding: 10px;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1;
+    background-color: white;
 }
 
 .header__logo {
