--- a/css/main.css
+++ b/css/main.css
@@ -3,12 +3,13 @@
     align-items: center;
     justify-content: center;
     padding: 10px;
-    position: fixed;
+    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
-    z-index: 1;
+    z-index: 2;
     background-color: white;
+    border-bottom: 1px solid rgb(242, 242, 242);
 }
 
 .header__logo {
