--- a/css/main.css
+++ b/css/main.css
@@ -16,6 +16,11 @@
     margin: 0;
 }
 
+.header__link {
+    color: inherit;
+    text-decoration: none;
+}
+
 .visually-hidden {
     position: absolute;
     width: 1px;
