--- a/css/sections/contact-us.css
+++ b/css/sections/contact-us.css
@@ -9,6 +9,16 @@
     padding: 0 20px;
 }
 
+.contact-us__box {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+}
+
+.contact-us__map {
+    border-radius: 8px;
+}
+
 .contact-us__title {
     margin: 0;
     letter-spacing: -.025em;
@@ -19,4 +29,58 @@
     color: #fff;
     text-align: center;
     margin-bottom: 50px;
+}
+
+.contact-us__form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+}
+
+.contact-us__field {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.contact-us__field-label {
+    font-family: 'Alverata', sans-serif;
+    font-weight: 300;
+    line-height: 1.4;
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 10px;
+}
+
+.contact-us__field-input {
+    padding: 8px;
+    outline: none;
+    border-radius: 6px;
+    border: 1px solid #f2f0ee;
+}
+
+.contact-us__submit {
+    padding: 10px;
+    width: 200px;
+    border-radius: 6px;
+    border: 1px solid #f2f0ee;
+    cursor: pointer;
+    margin-top: 10px;
+
+    &:hover {
+        opacity: 0.7;
+    }
+}
+
+@media screen and (max-width: 769px) {
+    .contact-us__box {
+        grid-template-columns: 1fr;
+        grid-template-rows: 200px max-content;
+        gap: 50px;
+    }
+
+    .contact-us__submit {
+        width: 100%;
+    }
 }
